--- a/data_aggregation/data_aggregation.ipynb
+++ b/data_aggregation/data_aggregation.ipynb
@@ -15,11 +15,11 @@
     "import numpy as np\n",
     "\n",
     "#生成するデータファイルの格納先のpathを指定してください\n",
-    "FILE_PATH = '' \n",
-    "#店舗数\n",
-    "NUM_SHOP = 50\n",
-    "#商品数\n",
-    "NUM_GOODS = 200"
+    "FILE_PATH = '/Users/hiroshiono/ono_project/text' \n",
+    "\n",
+    "NUM_SHOP = 10\n",
+    "\n",
+    "NUM_GOODS = 20"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#日付作成\n",
+    "\n",
     "start = datetime.datetime(2013, 1, 1)\n",
     "end = datetime.datetime(2016, 6, 30)\n",
     "\n",
@@ -66,10 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ID(店鋪&商品)取得\n",
     "random_id = random.sample(range(NUM_SHOP_goods), NUM_SHOP_goods)\n",
     "\n",
-    "#店鋪idと商品idが連動しないようにした\n",
     "id_shop = random_id[:NUM_SHOP]\n",
     "id_goods = random_id[NUM_SHOP:]"
    ]
@@ -88,7 +86,7 @@
     "    shop_list_data_day += shopid_data\n",
     "    goods_list_data_day += id_goods\n",
     "\n",
-    "# 1日あたり生成されるデータ数\n",
+    "#\n",
     "length_shop_goods_par_day = len(goods_list_data_day)\n",
     "\n",
     "\n",
@@ -108,21 +106,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 売上高と販売数量が一様乱数の場合"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1の答え\n",
-    "#売上高と販売数量は0~1000の一様乱数にした\n",
-    "\n",
     "main_df = pd.DataFrame({\n",
     "                      'shop_id' : shop_list_test_data,\n",
     "                      'goods_id':goods_list_test_data,\n",
@@ -142,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "作成されたcsvは 662.16MBなので正常終了\n"
+      "作成されたcsvは 12.83MBなので正常終了\n"
      ]
     },
     {
@@ -157,14 +145,12 @@
     }
    ],
    "source": [
-    "#500MB以上あるかチェック\n",
     "\n",
     "getsize_df=os.path.getsize(FILE_PATH )*9.536743164e-7\n",
     "\n",
     "\n",
     "def check_df_size(_getsize_df):\n",
-    "    #500MB以上あるのか判定\n",
-    "    if _getsize_df>500:\n",
+    "    if _getsize_df>10:\n",
     "        print(\"作成されたcsvは {:.2f}MBなので正常終了\".format(_getsize_df))\n",
     "        return True\n",
     "    else:\n",
@@ -185,11 +171,9 @@
     "df_month_shop_list =[]\n",
     "df_month_goods_list =[]\n",
     "\n",
-    "#monthには毎月の1日が格納されている\n",
     "for month in df_sum_month_group.sum().index[:]:\n",
     "    df_month = df_sum_month_group.get_group(month)\n",
     "    \n",
-    "    #shop_id,goodsごとのsumをとる\n",
     "    df_month_shop_group = df_month.groupby('shop_id').sum()\n",
     "    df_month_goods_group = df_month.groupby('goods_id').sum()\n",
     "    \n",
@@ -199,7 +183,6 @@
     "    df_month_shop_list.append(df_month_shop_group.loc[:, ['date','sale']])\n",
     "    df_month_goods_list.append(df_month_goods_group.loc[:, ['date','sale']])\n",
     "    \n",
-    "#2.1と2.２の回答\n",
     "df_month_shop = pd.concat(df_month_shop_list).reset_index().loc[:,['date','shop_id','sale']]\n",
     "df_month_goods = pd.concat(df_month_goods_list).reset_index().loc[:,['date','goods_id','sale']]\n"
    ]
@@ -210,13 +193,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2.3の回答\n",
     "\n",
-    "#有効数字10桁に変更\n",
     "pd.options.display.precision = 10\n",
     "def get_sale_division(_x):\n",
     "    sale,sales_quantity = _x\n",
-    "    #有効数字10桁\n",
+    "    \n",
     "    return float(format(sale/sales_quantity, '.10f'))\n",
     "\n",
     "\n",
@@ -238,13 +219,6 @@
     "    \n",
     "\n",
     "df_goods_mean = pd.concat(df_goods_mean_list).reset_index().loc[:, ['day','goods_id','sale/sale_quantity']]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 解答(5行まで出力)"
    ]
   },
   {
@@ -282,38 +256,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2013-01-01</th>\n",
-       "      <td>107</td>\n",
-       "      <td>9.5534230623</td>\n",
-       "      <td>355.6812675999</td>\n",
-       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>734.0047041118</td>\n",
+       "      <td>976.1966801310</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-01-01</th>\n",
-       "      <td>203</td>\n",
-       "      <td>733.1375249226</td>\n",
-       "      <td>204.7802622928</td>\n",
-       "      <td>66</td>\n",
+       "      <td>14</td>\n",
+       "      <td>507.6459009329</td>\n",
+       "      <td>325.1486566567</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-01-01</th>\n",
-       "      <td>6</td>\n",
-       "      <td>36.8355920021</td>\n",
-       "      <td>686.1620768920</td>\n",
-       "      <td>66</td>\n",
+       "      <td>25</td>\n",
+       "      <td>236.9122156336</td>\n",
+       "      <td>720.4011480627</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-01-01</th>\n",
-       "      <td>183</td>\n",
-       "      <td>580.1201881010</td>\n",
-       "      <td>200.6342933389</td>\n",
-       "      <td>66</td>\n",
+       "      <td>29</td>\n",
+       "      <td>162.0440895326</td>\n",
+       "      <td>496.9328550451</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-01-01</th>\n",
-       "      <td>36</td>\n",
-       "      <td>217.0481734970</td>\n",
-       "      <td>582.4778378337</td>\n",
-       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>659.9186226980</td>\n",
+       "      <td>235.2966616013</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -321,11 +295,11 @@
       ],
       "text/plain": [
        "            goods_id            sale  sales_quantity  shop_id\n",
-       "2013-01-01       107    9.5534230623  355.6812675999       66\n",
-       "2013-01-01       203  733.1375249226  204.7802622928       66\n",
-       "2013-01-01         6   36.8355920021  686.1620768920       66\n",
-       "2013-01-01       183  580.1201881010  200.6342933389       66\n",
-       "2013-01-01        36  217.0481734970  582.4778378337       66"
+       "2013-01-01         0  734.0047041118  976.1966801310       18\n",
+       "2013-01-01        14  507.6459009329  325.1486566567       18\n",
+       "2013-01-01        25  236.9122156336  720.4011480627       18\n",
+       "2013-01-01        29  162.0440895326  496.9328550451       18\n",
+       "2013-01-01        23  659.9186226980  235.2966616013       18"
       ]
      },
      "execution_count": 10,
@@ -334,7 +308,6 @@
     }
    ],
    "source": [
-    "#1\n",
     "main_df.head()"
    ]
   },
@@ -373,44 +346,44 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.1018225243e+06</td>\n",
+       "      <td>7</td>\n",
+       "      <td>310289.2779826038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3.1052421788e+06</td>\n",
+       "      <td>8</td>\n",
+       "      <td>305936.1418522086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3.0760369845e+06</td>\n",
+       "      <td>10</td>\n",
+       "      <td>298205.4896665026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3.0972320584e+06</td>\n",
+       "      <td>12</td>\n",
+       "      <td>317410.8229606421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>25</td>\n",
-       "      <td>3.0983841108e+06</td>\n",
+       "      <td>15</td>\n",
+       "      <td>311003.0594466545</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date  shop_id              sale\n",
-       "0 2013-01-01        3  3.1018225243e+06\n",
-       "1 2013-01-01        7  3.1052421788e+06\n",
-       "2 2013-01-01       17  3.0760369845e+06\n",
-       "3 2013-01-01       20  3.0972320584e+06\n",
-       "4 2013-01-01       25  3.0983841108e+06"
+       "        date  shop_id               sale\n",
+       "0 2013-01-01        7  310289.2779826038\n",
+       "1 2013-01-01        8  305936.1418522086\n",
+       "2 2013-01-01       10  298205.4896665026\n",
+       "3 2013-01-01       12  317410.8229606421\n",
+       "4 2013-01-01       15  311003.0594466545"
       ]
      },
      "execution_count": 11,
@@ -419,7 +392,6 @@
     }
    ],
    "source": [
-    "#2.1\n",
     "df_month_shop.head()"
    ]
   },
@@ -459,31 +431,31 @@
        "      <th>0</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>0</td>\n",
-       "      <td>774825.2462648593</td>\n",
+       "      <td>152992.1186705921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>1</td>\n",
-       "      <td>752302.6217068972</td>\n",
+       "      <td>160529.3404542719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>2</td>\n",
-       "      <td>761064.9996454796</td>\n",
+       "      <td>158531.4720524671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>774542.9842884388</td>\n",
+       "      <td>3</td>\n",
+       "      <td>154613.8969377864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>5</td>\n",
-       "      <td>766257.9733379297</td>\n",
+       "      <td>4</td>\n",
+       "      <td>155174.0075894637</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -491,11 +463,11 @@
       ],
       "text/plain": [
        "        date  goods_id               sale\n",
-       "0 2013-01-01         0  774825.2462648593\n",
-       "1 2013-01-01         1  752302.6217068972\n",
-       "2 2013-01-01         2  761064.9996454796\n",
-       "3 2013-01-01         4  774542.9842884388\n",
-       "4 2013-01-01         5  766257.9733379297"
+       "0 2013-01-01         0  152992.1186705921\n",
+       "1 2013-01-01         1  160529.3404542719\n",
+       "2 2013-01-01         2  158531.4720524671\n",
+       "3 2013-01-01         3  154613.8969377864\n",
+       "4 2013-01-01         4  155174.0075894637"
       ]
      },
      "execution_count": 12,
@@ -504,7 +476,6 @@
     }
    ],
    "source": [
-    "#2.2\n",
     "df_month_goods.head()"
    ]
   },
@@ -544,31 +515,31 @@
        "      <th>0</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.2878012114</td>\n",
+       "      <td>1.5124484920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.5515892244</td>\n",
+       "      <td>15.9502037919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.5389206563</td>\n",
+       "      <td>1.1886903920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>4</td>\n",
-       "      <td>9.5425605030</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11.3607699446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.7550923200</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.6588192187</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -576,11 +547,11 @@
       ],
       "text/plain": [
        "         day  goods_id  sale/sale_quantity\n",
-       "0 2013-01-01         0        1.2878012114\n",
-       "1 2013-01-01         1        1.5515892244\n",
-       "2 2013-01-01         2        1.5389206563\n",
-       "3 2013-01-01         4        9.5425605030\n",
-       "4 2013-01-01         5        2.7550923200"
+       "0 2013-01-01         0        1.5124484920\n",
+       "1 2013-01-01         1       15.9502037919\n",
+       "2 2013-01-01         2        1.1886903920\n",
+       "3 2013-01-01         3       11.3607699446\n",
+       "4 2013-01-01         4        1.6588192187"
       ]
      },
      "execution_count": 13,
@@ -589,16 +560,15 @@
     }
    ],
    "source": [
-    "#2.3\n",
     "df_goods_mean.head()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3-4.1.1]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda3-4.1.1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -610,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
